<resources>
    <string name="app_name">WeightChangeTracker</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_settings">Settings</string>

    <string name="action_settings">Settings</string>
    <string name="hint_weight">Weight…</string>
    <string name="hint_date">Date…</string>
    <string name="button_save">Save</string>
    <string name="empty_not_saved">Weight not saved because it is empty.</string>
    <string name="add_weight">Add weight</string>
    <string name="no_weight">No weights</string>
    <string name="weight_unit">kg</string>
    <string name="weight_display">%1$.1f %2$s</string>

    <string name="calendar_start_year_caption">Diet start year:</string>
    <string name="calendar_start_month_caption">Diet start month:</string>
    <string name="calendar_start_day_caption">Diet start day:</string>

    <string name="calendar_end_year_caption">Diet end year:</string>
    <string name="calendar_end_month_caption">Diet end month:</string>
    <string name="calendar_end_day_caption">Diet end day:</string>

    <string name="max_rate_change">Max weekly rate (%)</string>
    <string name="min_rate_change">Min weekly rate (%)</string>
    <string name="min_change_caption">Min weekly rate (%)</string>
    <string name="max_change_caption">Max weekly rate (%)</string>
    <string name="include_Weight_text">Include weight</string>

    <string name="chart_title">Weight history</string>
    <string name="main_line_title">Weight</string>
    <string name="max_line_title">Max</string>
    <string name="min_line_title">Min</string>
    <string name="tendency_line_title">Average</string>


</resources>